Fixed z-indexing issue while dialogs are open

--- a/src/WebComponents/Menu/menu.scss
+++ b/src/WebComponents/Menu/menu.scss
@@ -171,7 +171,7 @@
         width: var(--theme-h5);
         background-color: transparent;
         cursor: ew-resize;
-        z-index: 9999;
+        z-index: 99;
         opacity: 0.5;
         transform: translateX(calc(var(--theme-h5) / 2));
     }
